--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -113,6 +113,7 @@
 \newcommand*{\define}[1]{\textsc{\lowercase{#1}}\index{#1}}
 \newcommand*{\idefine}[1]{\textsc{\emph{\lowercase{#1}}}\index{#1@\emph{#1}}}
 \newcommand{\subs}[2]{\vert_{#1\curvearrowright #2}} % Æ notation for uniform substitution of #1 for #2
+\newcommand{\domain}{\text{domain}}
 
 %    ****************************************
 %    *          LIST  ENVIRONMENTS          *
