changes to rules around new assumptions, clarification of natural deduction structure, spelling of 'judgment'

--- a/forallx-adl-appendices.tex
+++ b/forallx-adl-appendices.tex
@@ -236,6 +236,12 @@ One way to say `there are exactly $n$ Fs' is to conjoin two of the symbolization
 %{\LARGE \textbf{Basic Rules of Proof}}
 \begin{multicols}{2}
 
+\subsection{New Assumption, p.\ \pageref{newass}}
+\begin{proof}
+	\have[\ ]{a}{\vdots}
+	\open
+	\hypo[\ ]{b}{\meta{B}}
+\end{proof}
 
 \subsection{Conjunction Introduction, p.\ \pageref{conjint}}
 \begin{proof}
