--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -378,7 +378,7 @@ The extension of a two-place predicate is a collection of ordered pairs drawn fr
 	\item $\symfrak{R}$ is \define{irreflexive} on $D$ iff for no $x$ in $D$ is $\ntuple{x, x}$ in $\symfrak{R}$.
 	\item If $\symfrak{R}$ is neither reflexive nor irreflexive, it is nonreflexive.
 \end{itemize}}
-An example of a reflexive relation is the extension of `\gap{1} is the same height as \gap{2}' on the domain of people. Everyone is the same height as themselves. An example of an irreflexive relation is the extension of `\gap{1} is taller than \gap{2}' on the domain of people, since no one is taller than they are. An example of a nonreflexive relation might be the extension of `\gap{1} trusts the judgment of \gap{2}' on the domain of people: some people trust their own judgement, while others second-guess themselves. Pictorially, a reflexive relation corresponds to a graph in which every node in the graph has an arrow pointing to itself, such as in Figure~\ref{fig:reflex}. 
+An example of a reflexive relation is the extension of `\gap{1} is the same height as \gap{2}' on the domain of people. Everyone is the same height as themselves. An example of an irreflexive relation is the extension of `\gap{1} is taller than \gap{2}' on the domain of people, since no one is taller than they are. An example of a nonreflexive relation might be the extension of `\gap{1} trusts the judgment of \gap{2}' on the domain of people: some people trust their own judgment, while others second-guess themselves. Pictorially, a reflexive relation corresponds to a graph in which every node in the graph has an arrow pointing to itself, such as in Figure~\ref{fig:reflex}. 
 \begin{figure}[t]
 \begin{tikzpicture}
 \node (atom1) at (0,2) {1};
