--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -257,7 +257,7 @@ Partly this tolerant attitude arises because logicians are interested principall
 
 As will be evident throughout this section, symbolising an argument in \TFL\ is not like translating it into another natural language. Translation aims to preserve the meaning of your original argument in all its nuance. Symbolisation is more like \emph{modelling}, where you choose to include certain important features and leave out other features that are not important for you. A physicist, for example, might model a system of moving bodies by treating all of them as point particles. Of course the bodies are in fact extended in space, but for the purposes for which the model is designed it may be irrelevant to include that detail, if all that the physicist is trying to do is to predict the overall trajectories of those bodies. Likewise, in logic if our project is to analyse whether an argument is conclusive or not, we may not need to include every detail of meaning in order to complete that project. A good model needn't be perfectly accurate, and in fact, highly accurate models can be very poor because their additional complexity makes them too unwieldy to work with. We will happily settle for models which are good enough to represent the important details. In the present context, that means we want to paraphrase arguments in a way that makes their logical structure explicit, and then to symbolise them using the closest available \TFL\ connectives, even if they are not perfectly synonymous with the English sentence connectives they contain. We'll return to this issue further in §\ref{sec:symvstrans}.
 
-Because a symbolisation isn't exactly alike in meaning to the original sentence, there is some room for the exercise of judgement. You will need sometimes to make choices between different paraphrases that seem to capture the gist of the sentence about equally well. You may have to make a \emph{judgement} about what the sentence is `really' trying to say. Such choices cannot be reduced to a mechanical algorithm. Though you can ask yourself some leading questions: ‘which way was this ambiguous sentence intended?’ or ‘are these two options plausibly intended to be understood as mutually exclusive?’.
+Because a symbolisation isn't exactly alike in meaning to the original sentence, there is some room for the exercise of judgment. You will need sometimes to make choices between different paraphrases that seem to capture the gist of the sentence about equally well. You may have to make a \emph{judgment} about what the sentence is `really' trying to say. Such choices cannot be reduced to a mechanical algorithm. Though you can ask yourself some leading questions: ‘which way was this ambiguous sentence intended?’ or ‘are these two options plausibly intended to be understood as mutually exclusive?’.
 
 % section modelling_and_paraphrase (end)
 
@@ -455,7 +455,7 @@ A word of caution. Ordinary speakers of English often use `if …, then …' whe
 
 
 \section{Unless}
-We have now introduced all of the connectives of \TFL. We can use them together to symbolise many kinds of sentences, but not every kind. It is a matter of judgement whether a given English connective can be symbolised in \TFL. One rather tricky case is the English-language connective `unless':
+We have now introduced all of the connectives of \TFL. We can use them together to symbolise many kinds of sentences, but not every kind. It is a matter of judgment whether a given English connective can be symbolised in \TFL. One rather tricky case is the English-language connective `unless':
 \begin{earg}
 \item[\ex{unless1}] Unless you wear a jacket, you will catch cold. 
 \item[\ex{unless2}] You will catch cold unless you wear a jacket. 
